--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
 						<div class="home__btns">
 							<a data-scroll href="#download" class="home__btn home__btn--white"><span>Download</span></a>
-							<a href="#" class="home__btn home__btn--white"><span>Whitepaper</span></a>
+							<!--<a href="#" class="home__btn home__btn--white"><span>Whitepaper</span></a>-->
 						</div>
 					</div>
 				</div>
