--- a/index.html
+++ b/index.html
@@ -1,291 +1,191 @@
+
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<head>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-	<!-- CSS -->
-	<link rel="stylesheet" href="css/bootstrap-reboot.min.css">
-	<link rel="stylesheet" href="css/bootstrap-grid.min.css">
-	<link rel="stylesheet" href="css/owl.carousel.min.css">
-	<link rel="stylesheet" href="css/magnific-popup.css">
-	<link rel="stylesheet" href="css/paymentfont.min.css">
-	<link rel="stylesheet" href="css/main.css">
+		<!-- OG -->
+		<meta property="og:url" content="https://shugacoin.org" />
+		<meta property="og:type" content="website" />
+		<meta property="og:title" content="Shugacoin" />
+		<meta property="og:description" content="one-CPU-one-vote, the world's fastest PoW blockchain" />
+		<meta property="og:image" content="/og_image.jpg" />
 
-	<!-- Favicons -->
-	<link rel="icon" type="image/png" href="icon/favicon-32x32.png" sizes="32x32">
-	<link rel="apple-touch-icon" href="icon/favicon-32x32.png">
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-	<meta name="description" content="Shugacoin is a cryptocurrency that enables instant payments to anyone in the world and that can be efficiently mined with consumer-grade hardware.">
-	<meta name="keywords" content="shuga,shugacoin,p2p,ltc,litecoin,crypto,cryptocurrency,bitcoin,doge">
-	<meta name="author" content="shugacoin">
-	<title>Shugacoin – Open source P2P digital currency</title>
+		<!-- Twitter Card -->
+		<meta name="twitter:card" content="summary_large_image" />
+		<meta name="twitter:title" content="Shugacoin" />
+		<meta name="twitter:description" content="one-CPU-one-vote, PoW blockchain" />
+		<meta name="twitter:site" content="@shugacoin" />
+		<meta name="twitter:creator" content="@shugacoin" />
+		<meta name="twitter:image" content="https://shugacoin.org/img/logo.png" />
 
-</head>
-<body>
-	<!-- header -->
-	<header class="header">
-		<div class="container">
-			<div class="row">
-				<div class="col-12">
-					<div class="header__content">
-						<!-- btn -->
-						<button class="header__btn" type="button">
-							<span></span>
-							<span></span>
-							<span></span>
-						</button>
-						<!-- end btn -->
+		<title>Shugacoin - PoW CPU Blockchain</title>
+		<link rel="icon" type="image/png" href="https://shugacoin.org/img/logo.png">
+		<link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Ubuntu&display=swap" rel="stylesheet">
 
-						<!-- logo -->
-						<a data-scroll href="#home" class="header__logo">
-							<img class="header__logo-white" src="img/logo.png" alt="Shugacoin logo">
-							<img class="header__logo-dark" src="img/logo.png" alt="Shugacoin logo">
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.min.js"></script>
+
+		<link href='https://fonts.googleapis.com/css?family=Ubuntu' rel='stylesheet'>
+		<link href='https://fonts.googleapis.com/css?family=Ubuntu Mono' rel='stylesheet'>
+
+		<!-- ZERO-MD -->
+		<script src="https://cdn.jsdelivr.net/npm/@webcomponents/webcomponentsjs@2/webcomponents-loader.min.js"></script>
+		<script type="module" src="https://cdn.jsdelivr.net/gh/zerodevx/zero-md@1/src/zero-md.min.js"></script>
+
+		<style>
+			body, html {
+				font-family: 'Ubuntu';
+				height: 100%;
+				padding: 0;
+				margin: 0;
+			}
+			header {
+				height: 100%;
+				padding: 0;
+				margin: 0;
+				display: -webkit-box;
+				display: -moz-box;
+				display: -ms-flexbox;
+				display: -webkit-flex;
+				display: flex;
+				align-items: center;
+				justify-content: center;
+				background-color: #444c82;
+				color: #ffffff;
+			}
+			header h1 {
+				margin: 0;
+			}
+			header .content {
+				width: 100%;
+				display: flex;
+			}
+			header img.logo {
+				max-width: 256px;
+			}
+			header .links a {
+				margin: 0px 5px;
+				display: inline-block;
+			}
+			a {
+				color: #7f97d8;
+				text-decoration: underline;
+				transition: ease-in 0.1s;
+			}
+			a:hover {
+				color: #5877cc;
+			}
+			#specs {
+				padding: 30px 0px;
+			}
+			#specs img {
+				max-width: 100%;
+			}
+			footer {
+				background-color: #191B1C;
+				color: #ffffff;
+				padding: 20px;
+			}
+			code {
+				padding: 2px;
+				margin: 2px;
+				font-family: 'Ubuntu Mono';
+				font-size: 112%;
+				color: #e83e8c;
+			}
+			pre code {
+				padding: 0px;
+				margin: 0px;
+				font-family: 'Ubuntu Mono';
+				font-size: 112%;
+			}
+			a.img-link {
+				text-decoration: none;
+				padding: 5px;
+			}
+			a.img-link:hover {
+				text-decoration: none;
+			}
+			a.img-link img {
+				height: 32px;
+				width: 32px;
+			}
+		</style>
+	</head>
+
+	<body>
+		<header>
+			<div class="content">
+				<div class="text-center container">
+					<h1 class="d-block mb-2">
+						Shugacoin
+					</h1>
+					<h4>
+						one-CPU-one-vote, PoW blockchain
+					</h4>
+					<div id="height" class="d-block mb-2">
+						Current height is <span class="loading">loading...</span> <a href="#" class="current d-none" target="_blank">0</a> (<span class="passed">0</span> blocks since you open this page)
+					</div>
+					<div class="links mb-2">
+						<a href="https://github.com/shugacoin-project/shugacoin/releases/latest" target="_blank">DOWNLOAD</a>
+						<a href="https://explorer.shugacoin.org/#/" target="_blank">EXPLORER</a>
+						<a href="https://wallet.shugacoin.org/#/" target="_blank">WEB WALLET</a>
+					</div>
+
+					<div class="markets mb-2">
+						<a href="#" target="_blank" class="img-link">
+							<img src="https://shugacoin.org/img/cmclogo.png">
 						</a>
-						<!-- end logo -->
-
-						<!-- tagline -->
-						<span class="header__tagline">SHUGACOIN</span>
-						<!-- end tagline -->
-
-						<!-- navigation -->
-						<ul class="header__nav">
-							<li>
-								<a data-scroll href="#about">About</a>
-							</li>
-							<li>
-								<a data-scroll href="#download">Download</a>
-							</li>				
-						</ul>
-						<!-- end navigation -->
-					</div>
-				</div>
-			</div>
-		</div>
-	</header>
-	<!-- end header -->
-
-	<!-- home -->
-	<section id="home" class="home section--bg" data-bg="img/home/slide.jpg">
-		<div class="container">
-			<div class="row">
-				<div class="col-12 col-xl-7">
-					<div class="home__content home__content--left">
-						<h1 class="home__title">THE CRYPTOCURRENCY FOR PAYMENTS</h1>
-
-						<p class="home__text">Based on Blockchain Technology</p>
-
-						<div class="home__btns">
-							<a data-scroll href="#download" class="home__btn home__btn--white"><span>Download</span></a>
-							<!--<a href="#" class="home__btn home__btn--white"><span>Whitepaper</span></a>-->
-						</div>
-					</div>
-				</div>
-
-			</div>
-		</div>
-	</section>
-	<!-- end home -->
-
-	<!-- about -->
-	<section id="about" class="about about--wave section--gradient">
-		<div class="container">
-			<div class="row">
-				<!-- section title -->
-				<div class="col-12">
-					<h2 class="section__title section__title--white section__title--margin">WHAT IS SHUGACOIN?</h2>
-				</div>
-				<!-- end section title -->
-
-				<div class="col-12">
-					<!-- about text -->
-					<div class="about__text">
-						<p>
-							<b>Shugacoin</b> is a peer-to-peer Internet currency that enables instant, near-zero cost payments to anyone in the world. <b>Shugacoin</b> is an open source, global payment network that is fully decentralized without any central authorities. Mathematics secures the network and empowers individuals to control their own finances. <b>Shugacoin</b> features faster transaction confirmation times and improved storage efficiency than the leading math-based currency. With substantial industry support, trade volume and liquidity, <b>Shugacoin</b> is a proven medium of commerce complementary to Litecoin.						
-						</p>
-					</div>
-					<!-- end about text -->
-				</div>
-			</div>
-		</div>
-	</section>
-	<!-- end about -->
-
-	<!-- features -->
-	<section id="features" class="section section--grey">
-		<div class="container">
-			<div class="row">
-
-				<div class="col-12 col-sm-6 col-lg-4">
-					<!-- box (style 2) -->
-					<div class="box2">
-						<span class="box2__icon">
-							<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M14,9H10a1,1,0,0,0-1,1v4a1,1,0,0,0,1,1h4a1,1,0,0,0,1-1V10A1,1,0,0,0,14,9Zm-1,4H11V11h2Zm8,0a1,1,0,0,0,0-2H19V9h2a1,1,0,0,0,0-2H18.82A3,3,0,0,0,17,5.18V3a1,1,0,0,0-2,0V5H13V3a1,1,0,0,0-2,0V5H9V3A1,1,0,0,0,7,3V5.18A3,3,0,0,0,5.18,7H3A1,1,0,0,0,3,9H5v2H3a1,1,0,0,0,0,2H5v2H3a1,1,0,0,0,0,2H5.18A3,3,0,0,0,7,18.82V21a1,1,0,0,0,2,0V19h2v2a1,1,0,0,0,2,0V19h2v2a1,1,0,0,0,2,0V18.82A3,3,0,0,0,18.82,17H21a1,1,0,0,0,0-2H19V13Zm-4,3a1,1,0,0,1-1,1H8a1,1,0,0,1-1-1V8A1,1,0,0,1,8,7h8a1,1,0,0,1,1,1Z"/></svg>
-						</span>
-						<h3 class="box2__title">Community</h3>
-						<p class="box2__text">Find support across a growing number of SHUGA communities:</p>
-						<ul class="text-muted text-left "> 
-							<li><a href="#">SHUGA Telegram</a></li>
-							<li><a href="#">SHUGA Discord</a></li> 
-							<li><a href="#">SHUGA X</a></li> 
-						</ul>
-					</div>
-					<!-- end box (style 2) -->
-				</div>
-
-				<div class="col-12 col-sm-6 col-lg-4">
-					<!-- box (style 2) -->
-					<div class="box2">
-						<span class="box2__icon">
-							<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M10.17,10.55a1,1,0,0,0,.73.45,1,1,0,0,0,.81-.29l1.13-1.14,1.33,2A1,1,0,0,0,15,12a.94.94,0,0,0,.55-.17,1,1,0,0,0,.28-1.38l-2-3A1,1,0,0,0,13.1,7a1,1,0,0,0-.81.29L11.16,8.43l-1.33-2a1,1,0,1,0-1.66,1.1ZM21,14H20V4h1a1,1,0,0,0,0-2H3A1,1,0,0,0,3,4H4V14H3a1,1,0,0,0,0,2h8v1.15l-4.55,3A1,1,0,0,0,7,22a.94.94,0,0,0,.55-.17L11,19.55V21a1,1,0,0,0,2,0V19.55l3.45,2.28A.94.94,0,0,0,17,22a1,1,0,0,0,.55-1.83l-4.55-3V16h8a1,1,0,0,0,0-2Zm-3,0H6V4H18Z"/></svg>
-						</span>
-						<h3 class="box2__title">Resources</h3>
-						<p class="box2__text">Find general information as well as a list of services and exchanges that support Shugacoin at the <a href="#">Shugacoin Wiki</a>. <br> Up-to-date network statistics can be found at <a href="#">Shugacoin Block Explorer Charts</a>. <br> Source code for Shugacoin Core and related projects are available on <a href="https://github.com/shugacoin-project">GitHub</a>.</p>
-					</div>
-					<!-- end box (style 2) -->
-				</div>
-
-				<div class="col-12 col-sm-6 col-lg-4">
-					<!-- box (style 2) -->
-					<div class="box2">
-						<span class="box2__icon">
-							<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M14,9H10a1,1,0,0,0-1,1V22a1,1,0,0,0,1,1h4a1,1,0,0,0,1-1V10A1,1,0,0,0,14,9ZM13,21H11V11h2ZM22,1H18a1,1,0,0,0-1,1V22a1,1,0,0,0,1,1h4a1,1,0,0,0,1-1V2A1,1,0,0,0,22,1ZM21,21H19V3h2ZM6,15H2a1,1,0,0,0-1,1v6a1,1,0,0,0,1,1H6a1,1,0,0,0,1-1V16A1,1,0,0,0,6,15ZM5,21H3V17H5Z"/></svg>
-						</span>
-						<h3 class="box2__title">Open Source Software</h3>
-						<p class="box2__text">Shugacoin is an open source software project released under the MIT/X11 license which gives you the power to run, modify, and copy the software and to distribute, at your option, modified copies of the software. The software is released in a transparent process that allows for independent verification of binaries and their corresponding source code.</p>
-					</div>
-					<!-- end box (style 2) -->
-				</div>
-
-				<div class="col-12 col-sm-6 col-lg-4">
-					<!-- box (style 2) -->
-					<div class="box2">
-						<span class="box2__icon">
-							<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M15,17a1,1,0,1,0,1,1A1,1,0,0,0,15,17ZM9,17H6a1,1,0,0,0,0,2H9a1,1,0,0,0,0-2Zm9,0a1,1,0,1,0,1,1A1,1,0,0,0,18,17Zm-3-6a1,1,0,1,0,1,1A1,1,0,0,0,15,11ZM9,11H6a1,1,0,0,0,0,2H9a1,1,0,0,0,0-2Zm9-6a1,1,0,1,0,1,1A1,1,0,0,0,18,5Zm0,6a1,1,0,1,0,1,1A1,1,0,0,0,18,11Zm4-6a3,3,0,0,0-3-3H5A3,3,0,0,0,2,5V7a3,3,0,0,0,.78,2A3,3,0,0,0,2,11v2a3,3,0,0,0,.78,2A3,3,0,0,0,2,17v2a3,3,0,0,0,3,3H19a3,3,0,0,0,3-3V17a3,3,0,0,0-.78-2A3,3,0,0,0,22,13V11a3,3,0,0,0-.78-2A3,3,0,0,0,22,7ZM20,19a1,1,0,0,1-1,1H5a1,1,0,0,1-1-1V17a1,1,0,0,1,1-1H19a1,1,0,0,1,1,1Zm0-6a1,1,0,0,1-1,1H5a1,1,0,0,1-1-1V11a1,1,0,0,1,1-1H19a1,1,0,0,1,1,1Zm0-6a1,1,0,0,1-1,1H5A1,1,0,0,1,4,7V5A1,1,0,0,1,5,4H19a1,1,0,0,1,1,1ZM15,5a1,1,0,1,0,1,1A1,1,0,0,0,15,5ZM9,5H6A1,1,0,0,0,6,7H9A1,1,0,0,0,9,5Z"/></svg>
-						</span>
-						<h3 class="box2__title">Blockchain</h3>
-						<p class="box2__text">The Shugacoin blockchain is capable of handling higher transaction volume than its counterpart - Litecoin. Due to more frequent block generation, the network supports more transactions without a need to modify the software in the future. As a result, merchants get faster confirmation times, while still having ability to wait for more confirmations when selling bigger ticket items.</p>
-					</div>
-					<!-- end box (style 2) -->
-				</div>
-
-				<div class="col-12 col-sm-6 col-lg-4">
-					<!-- box (style 2) -->
-					<div class="box2">
-						<span class="box2__icon">
-							<svg xmlns="http://www.w3.org/2000/svg" enable-background="new 0 0 24 24" viewBox="0 0 24 24"><path d="M19,12h-7V5c0-0.6-0.4-1-1-1c-5,0-9,4-9,9s4,9,9,9s9-4,9-9C20,12.4,19.6,12,19,12z M12,19.9c-3.8,0.6-7.4-2.1-7.9-5.9C3.5,10.2,6.2,6.6,10,6.1V13c0,0.6,0.4,1,1,1h6.9C17.5,17.1,15.1,19.5,12,19.9z M15,2c-0.6,0-1,0.4-1,1v6c0,0.6,0.4,1,1,1h6c0.6,0,1-0.4,1-1C22,5.1,18.9,2,15,2z M16,8V4.1C18,4.5,19.5,6,19.9,8H16z"/></svg>
-						</span>
-						<h3 class="box2__title">Wallet Encryption</h3>
-						<p class="box2__text">Wallet encryption allows you to secure your wallet, so that you can view transactions and your account balance, but are required to enter your password before spending SHUGA.
-						This provides protection from wallet-stealing viruses and trojans as well as a sanity check before sending payments.</p>
-					</div>
-					<!-- end box (style 2) -->
-				</div>
-
-				<div class="col-12 col-sm-6 col-lg-4">
-					<!-- box (style 2) -->
-					<div class="box2">
-						<span class="box2__icon">
-							<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M22,17H2a1,1,0,0,0,0,2H22a1,1,0,0,0,0-2Zm0,4H2a1,1,0,0,0,0,2H22a1,1,0,0,0,0-2ZM6,7A1,1,0,1,0,7,8,1,1,0,0,0,6,7ZM20,1H4A3,3,0,0,0,1,4v8a3,3,0,0,0,3,3H20a3,3,0,0,0,3-3V4A3,3,0,0,0,20,1Zm1,11a1,1,0,0,1-1,1H4a1,1,0,0,1-1-1V4A1,1,0,0,1,4,3H20a1,1,0,0,1,1,1ZM12,5a3,3,0,1,0,3,3A3,3,0,0,0,12,5Zm0,4a1,1,0,1,1,1-1A1,1,0,0,1,12,9Zm6-2a1,1,0,1,0,1,1A1,1,0,0,0,18,7Z"/></svg>
-						</span>
-						<h3 class="box2__title">Mining Reward</h3>
-						<p class="box2__text">Miners are currently awarded with 50 SHUGA per block, an amount which gets halved roughly every 4 years (every 840,000 blocks).
-						The Litecoin network is therefore scheduled to produce 84 million SHUGA, which is 4 times as many currency units as Litecoin.</p>
-					</div>
-					<!-- end box (style 2) -->
-				</div>
-			</div>
-		</div>
-	</section>
-	<!-- end features -->
-
-	<!-- partners -->
-<!--	<div class="partners section--grey">
-		<div class="container">
-			<div class="row">
-				<div class="col-12">
-					<div class="owl-carousel partners__slider">
-						<a href="#">
-							<img src="#" alt="">
+						<a href="#" target="_blank" class="img-link">
+							<img src="https://shugacoin.org/img/coingecko.png">
+						</a>
+						<a href="#" target="_blank" class="img-link">
+							<img src="https://shugacoin.org/img/paprika.svg">
+						</a>
+						<a href="#" target="_blank" class="img-link">
+							<img src="https://shugacoin.org/img/coinlore.png">
 						</a>
 					</div>
 				</div>
 			</div>
-		</div>
-	</div>-->
-	<!-- end partners -->
-	
-	<!-- get Download -->
-	<section id="download" class="section section--pt0">
-		<div class="container">
-			<div class="row">
-				<!-- section title -->
-				<div class="col-12">
-					<h2 class="section__title">Download</h2>
-				</div>
-				<!-- end section title -->
-		<div class="container">
-			<div class="row">
+		</header>
 
-						<!-- tabs content -->
-						<div class="col-12">
-							<div class="tab-content">
-								<!-- tab1 -->
-								<div class="tab-pane fade show active" id="tab-1" role="tabpanel">
-									<center><ul class="offers">
-										<li class="offers__item">
-											<span class="offers__get">Win64</span>
-											<a class="offers__btn" href="#"><span>Download</span></a>
-										</li>
-										<li class="offers__item">
-											<span class="offers__get">Win32</span>
-											<a class="offers__btn" href="#"><span>Download</span></a>
-										</li>
-										<li class="offers__item">
-											<span class="offers__get">MacOSX</span>
-											<a class="offers__btn" href="#"><span>Download</span></a>
-										</li>
-										<li class="offers__item">
-											<span class="offers__get">Android</span>
-											<a class="offers__btn" href="#"><span>Download</span></a>
-										</li>										
-									</ul></center>
-								</div>
-								<!-- end tab1 -->
+		<script>
+			var height_start = 0
 
-							</div>
-						</div>
-						<!-- end tabs content -->
-					</div>
-				</div>
-			</div>
-		</div>
-	</section>
-	<!-- end get Download -->
-	
-	<!-- footer -->
-	<footer class="footer">
-		<div class="container">
-			<div class="row">
-				<div class="col-12">
-					<!-- copyright -->
-					<small class="footer__copyright">Copyright © 2024, Shugacoin Project. All rights reserved.</small>
-					<!-- end copyright -->
-				</div>
-			</div>
-		</div>
-	</footer>
-	<!-- end footer -->
+			function stats(first = false) {
+				Promise.resolve($.ajax({
+					url: "https://api.shugacoin.org/info",
+				})).then(function(data) {
+					$("#height .current").attr("href", "https://explorer.shugacoin.org/#/block/" + data["result"]["bestblockhash"])
+					$("#height .current").text(data["result"]["blocks"])
+					if (first) {
+						height_start = data["result"]["blocks"]
+						$("#height .loading").addClass("d-none")
+						$("#height .current").removeClass("d-none")
+					} else {
+						$("#height .passed").text(data["result"]["blocks"] - height_start)
+					}
+				})
+			}
 
-	<!-- JS -->
-	<script src="js/jquery-3.5.1.min.js"></script>
-	<script src="js/bootstrap.bundle.min.js"></script>
-	<script src="js/owl.carousel.min.js"></script>
-	<script src="js/smooth-scroll.min.js"></script>
-	<script src="js/jquery.magnific-popup.min.js"></script>
-	<script src="js/jquery.parallax.min.js"></script>
-	<script src="js/jquery.waypoints.min.js"></script>
-	<script src="js/jquery.counterup.min.js"></script>
-	<script src="js/main.js"></script>
-</body>
+			$(document).ready(function($) {
+				$(".scroll").click(function(event){
+					event.preventDefault();
+					$("html, body").animate({scrollTop: $(this.hash).offset().top}, 750);
+				});
+			});
+
+			$(document).ready(function() {
+				stats(true)
+				window.setInterval(function() {
+					stats()
+				}, 4000);
+			})
+		</script>
+	</body>
 </html>
