--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
 						<!-- ***** Logo Start ***** -->
 						<a href="/" class="logo">
 							<img src="assets/images/logos/logo_107x29.png" class="light-logo" alt="Shugacoin Logo"/>
-						</a>
+							<img src="assets/images/logos/107x29_blue.png" class="dark-logo" alt="Shugacoin Logo"/>
+						</a>		
 						<!-- ***** Logo End ***** -->
 
 						<!-- ***** Menu Start ***** -->
