--- a/index.html
+++ b/index.html
@@ -18,6 +18,15 @@
 
 	<!-- Custom CSS -->
 	<link href="assets/css/shuga.coin.min.css?v=1.0.0" rel="stylesheet" type="text/css">
+	<!-- Google tag (gtag.js) -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-SQZ7PDDLLN"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
+
+	  gtag('config', 'G-SQZ7PDDLLN');
+	</script>	
 </head>
 <body>
 
