added buy shuga

--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
                 <div class="collapse navbar-collapse" id="navbarCollapse">
                     <ul class="navbar-nav ms-auto" id="navbar-navlist">
                         <li class="nav-item">
+                            <a class="nav-link" href="https://wallet.shugacoin.org/">Buy $SHUGA</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link" href="https://wallet.shugacoin.org/">Web Wallet</a>
                         </li>
                         <li class="nav-item">
@@ -108,7 +111,7 @@
                     <a href="#"><img src="images/logo/coingecko.png" alt class="img-fluid" width="200" height="200" title="coingecko"/></a>
                 </div>
                 <div class="col-lg-3 col-5">
-                    <a href="#"><img src="images/logo/bitstorage.png" alt class="img-fluid" width="200" height="200" title="bitstorage"/></a>
+                    <a href="https://bit.ly/buy-shuga"><img src="images/logo/bitstorage.png" alt class="img-fluid" width="200" height="200" title="bitstorage"/></a>
                 </div>	
                 <div class="col-lg-3 col-5">
                     <a href="#"><img src="images/logo/nomics.png" alt class="img-fluid" width="200" height="200" title="nomics"/></a>
