--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <div class="collapse navbar-collapse" id="navbarCollapse">
                     <ul class="navbar-nav ms-auto" id="navbar-navlist">
                         <li class="nav-item">
-                            <a class="nav-link" href="https://wallet.shugacoin.org/">Buy $SHUGA</a>
+                            <a class="nav-link" href="https://bit.ly/buy-shuga/">Buy $SHUGA</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="https://wallet.shugacoin.org/">Web Wallet</a>
