--- a/index.html
+++ b/index.html
@@ -116,6 +116,9 @@
                 </div>	
                 <div class="col-lg-3 col-5">
                     <a href="#"><img src="images/logo/nomics.png" alt class="img-fluid" width="200" height="200" title="nomics"/></a>
+                </div>	
+				<div class="col-lg-3 col-5">
+                    <a href="https://coinpaprika.com/coin/shuga-shugacoin/"><img src="images/logo/paprika.png" alt class="img-fluid" width="200" height="200" title="coinpaprika"/></a>
                 </div>					
             </div>
             <!-- row end  -->
