--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                     <div class="main-btn mt-4">
                         <a href="https://discord.com/invite/BFJpACPyPH" class="btn btn-primary fs-6 mb-3"><span><i class="bi bi-discord"></i></span></a>
                         <a href="https://twitter.com/shugacoin" class="btn btn-primary fs-6 mb-3"><span><i class="bi bi-twitter-x"></i></span></a>
-                        <a href="https://t.me/shugacoin" class="btn btn-primary fs-6 mb-3"><span><i class="bi bi-telegram"></i></span></a>
+                        <a href="https://t.me/shugaproject" class="btn btn-primary fs-6 mb-3"><span><i class="bi bi-telegram"></i></span></a>
                         <a href="https://bitcointalk.org/index.php?topic=5487986.0" class="btn btn-primary fs-6 mb-3"><span><i class="bi bi-currency-bitcoin"></i></span></a>
                         <a href="https://github.com/shugacoin-project" class="btn btn-primary fs-6 mb-3"><span><i class="bi bi-github"></i></a>
                     </div>
